# zdzich

./: .gitattributes  .gitignore  .gitmodules  Buduj.ps1  Buduj.sh  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  errors.mc  rstd.c
app/zd4/: CMakeLists.txt  zd4.mc
app/zd4/src/: CMakeLists.txt  arguments.cpp  clear.c  list_zdi.c  main.cpp  translations.cpp  zd4.cpp  zd4.h
app/zdc/: CMakeLists.txt  zdc.mc
app/zdc/src/: CMakeLists.txt  translations.cpp  zdc.cpp  zdc.hpp
cmake/: mc.cmake  version.cmake
docs/: zd4.md  zdc.md  zgodność.md
gwizd/: CMakeLists.txt
gwizd/include/: zd.hpp
gwizd/include/zd/: error.hpp  message.hpp  unit.hpp
gwizd/include/zd/lex/: lexer.hpp  pl_istream.hpp  token.hpp
gwizd/include/zd/text/: characters.hpp  encoding.hpp  pl_string.hpp
gwizd/src/: CMakeLists.txt
gwizd/src/zd/: CMakeLists.txt  messagep.cpp  messagew.cpp  unit.cpp  ustring.cpp
gwizd/src/zd/lex/: CMakeLists.txt  lexer.cpp  pl_istream.cpp  token.cpp
gwizd/src/zd/par/: CMakeLists.txt  parser.cpp
gwizd/src/zd/text/: CMakeLists.txt  encoding.cpp  pl_string.cpp
gwizd/src/zd/text/encoding/: ibm852.cpp  utf_8.cpp  windows_1250.cpp
libzdstd/: CMakeLists.txt
libzdstd/include/Zdzich/: Program.hpp  ProgramDos.hpp  Rejestry.hpp  StrumieńDos.hpp
libzdstd/include/zd/: sysio.hpp
libzdstd/src/: CMakeLists.txt
libzdstd/src/Zdzich/: Program.cpp  ProgramDos.cpp
libzdzich/include/Zdzich/: ProgramDos.hpp  Rejestry.hpp  Skoki.hpp  Typy.hpp
sample/: CMakeLists.txt  idzwiek2.zdi  iklawiat.zdi  imysz.zdi  lek05-03.cpp
sample/INC/: DOGIER.INC  DZWIEK.INC  DZWIEK2.INC  KLAWIAT.INC  MYSZ.INC
sample/INC/SAVER/: CMakeLists.txt  SAVER.INC  SAVER.ZDI
sample/KURS/: CMakeLists.txt  KURS01.TXT  KURS02.TXT  KURS03.TXT  KURS04.TXT
sample/KURS/SAMPLE/: CMakeLists.txt
sample/KURS/SAMPLE/LEKCJA01/: CMakeLists.txt  LEK1-00.ZDI  LEK1-01.ZDI  LEK1-02.ZDI  LEK1-03.ZDI  LEK1-05.ZDI
sample/KURS/SAMPLE/LEKCJA02/: CMakeLists.txt  LEK2-00.ZDI  LEK2-01.ZDI
sample/KURS/SAMPLE/LEKCJA03/: CMakeLists.txt  LEK03-00.ZDI  LEK03-01.ZDI  LEK03-02.ZDI  LEK03-03.ZDI
sample/KURS/SAMPLE/LEKCJA04/: CMakeLists.txt  LEK04-00.ZDI  LEK04-01.ZDI
sample/KURS/SAMPLE/LEKCJA05/: CMakeLists.txt  LEK05-00.ZDI  LEK05-01.ZDI  LEK05-02.ZDI  LEK05-03.ZDI
sample/KURS/SAMPLE/LEKCJA06/: CMakeLists.txt  LEK06-00.ZDI  LEK06-01.ZDI  LEK06-02.ZDI  LEK06-03.ZDI
sample/KURS/SAMPLE/LEKCJA07/: CMakeLists.txt  LEK07-00.ZDI  LEK07-01.ZDI  PROGRAM.INC  PROGRAM.ZDI
sample/KURS/SAMPLE/LEKCJA08/: CMakeLists.txt  LEK08-00.ZDI  LEK08-01.ZDI  LEK08-02.ZDI  LEK08-03.ZDI
sample/KURS/SAMPLE/LEKCJA09/: CMakeLists.txt  LEK09-00.ZDI  LEK09-01.ZDI  LEK09-02.ZDI  LEK09-03.ZDI  LEK09-04.ZDI
sample/KURS/SAMPLE/LEKCJA10/: CMakeLists.txt  LEK10-00.ZDI  LEK10-01.ZDI  LEK10-02.ZDI  LEK10-03.ZDI
sample/KURS/SAMPLE/LEKCJA11/: CMakeLists.txt  LEK11-00.ZDI
sample/KURS/SAMPLE/ZADANIA/: CMakeLists.txt  ZADANIE1.ZDI  ZADANIE3.ZDI  ZADANIE9.ZDI
sample/PRZYKLAD/: !TLO.ZDI  ALARM.ZDI  ASCII.ZDI  CMakeLists.txt  COOL-GR1.ZDI  DEMO.ZDI  DZWIEK.ZDI  EFEKT.ZDI  LOSOWE.ZDI  MYSZ.ZDI  MYSZKA.ZDI  MYSZRYS.ZDI  PARAMETR.ZDI  PLIKI1.ZDI  PLIKI2.ZDI  SKOKI.ZDI  TESTMYSZ.ZDI  WSTAW.INC  WSTAW.ZDI
sample/PRZYKLAD/DOWCIPY/: !DOWCIPY.ZDI  CMakeLists.txt
sample/PRZYKLAD/GRA/: CMakeLists.txt  CZASN.ZDI
sample/PRZYKLAD/KWADRAT/: CMakeLists.txt  KWADRAT.ZDI  KWADRAT2.ZDI
sample/PRZYKLAD/LINIA/: CMakeLists.txt  EFEKT.ZDI  EFEKT2.ZDI  PION.ZDI  POZIOM.ZDI  SKOS.ZDI  SKOS2.ZDI
sample/PRZYKLAD/PETLE/: CMakeLists.txt  PETLA.ZDI  PETLA2.ZDI  PETLA3.ZDI  PETLA4.ZDI
sample/PRZYKLAD/ZC/: CMakeLists.txt  ZC.ZDI  ZDC-DLL.INC
tools/: mconv.py
zdc/: CMakeLists.txt  zdc.mc
zdc/include/: zd.hpp
zdc/include/zd/: characters.hpp  containers.hpp  encoding.hpp  error.hpp  lexer.hpp  message.hpp  min_istream.hpp  pl_istream.hpp  pl_string.hpp  token.hpp  ustring.hpp
zdc/include/zd/io/: min_istream.hpp
zdc/include/zd/lex/: lexer.hpp  pl_istream.hpp  token.hpp
zdc/include/zd/par/: node.hpp  parser.hpp
zdc/include/zd/text/: characters.hpp  encoding.hpp  pl_string.hpp
zdc/src/: CMakeLists.txt  messages.cpp  zdc.cpp  zdc.mc
zdc/src/zd/: CMakeLists.txt  encoding.cpp  error.cpp  lexer.cpp  messagep.cpp  pl_istream.cpp  pl_string.cpp  token.cpp  ustring.cpp
zdc/src/zd/encoding/: ibm852.cpp  iso_8859_2.cpp  utf_8.cpp  windows_1250.cpp  x_iso_or_windows.cpp  x_mazovia.cpp
zdc/src/zd/lex/: CMakeLists.txt  lexer.cpp  pl_istream.cpp  token.cpp
zdc/src/zd/par/: CMakeLists.txt  node.cpp  parser.cpp
zdc/src/zd/text/: CMakeLists.txt  pl_string.cpp
zdc/src/zd/text/encoding/: iso_8859_2.cpp  x_iso_or_windows.cpp  x_mazovia.cpp
