add_zdc_program(TLO !TLO.ZDI)
add_zdc_program(ALARM ALARM.ZDI)
add_zdc_program(ASCII ASCII.ZDI)
add_zdc_program(COOL-GR1 COOL-GR1.ZDI)
add_zdc_program(DEMO DEMO.ZDI)
add_zdc_program(DZWIEK DZWIEK.ZDI)
add_zdc_program(EFEKT-P EFEKT.ZDI)
add_zdc_program(LOSOWE LOSOWE.ZDI)
add_zdc_program(MYSZ MYSZ.ZDI)
add_zdc_program(MYSZKA MYSZKA.ZDI)
add_zdc_program(MYSZRYS MYSZRYS.ZDI)
add_zdc_program(PARAMETR PARAMETR.ZDI)
add_zdc_program(PLIKI1 PLIKI1.ZDI)
add_zdc_program(PLIKI2 PLIKI2.ZDI)
add_zdc_program(SKOKI SKOKI.ZDI)
add_zdc_program(TESTMYSZ TESTMYSZ.ZDI ENCODING dos)
add_zdc_program(WSTAW WSTAW.ZDI)

add_subdirectory(DOWCIPY)
add_subdirectory(GRA)
add_subdirectory(KWADRAT)
add_subdirectory(LINIA)
add_subdirectory(PETLE)
add_subdirectory(ZC)
