add_subdirectory(LEKCJA01)
add_subdirectory(LEKCJA02)
add_subdirectory(LEKCJA03)
add_subdirectory(LEKCJA04)
add_subdirectory(LEKCJA05)
add_subdirectory(LEKCJA06)
add_subdirectory(LEKCJA07)
add_subdirectory(LEKCJA08)
add_subdirectory(LEKCJA09)
add_subdirectory(LEKCJA10)
add_subdirectory(LEKCJA11)
add_subdirectory(ZADANIA)
